2005-06-02  Hans Breuer  <hans@breuer.org>

	* objects/UML/class_dialog.c : the memory managment with respect to
	attribute/operation connections was/is a mess. But it should work again ;)

	* samples/UMLPackages.dia samples/Composite-Action.dia : some diagrams
	directly from the UML Specification - to show the power of Dia and 
	some weakness. Watch the bug reports following ;)

2005-06-01  Hans Breuer  <hans@breuer.org>

	* app/dia.def : export diagram_update_connections_object
	* plug-ins/python/pydia-diagram.c : wrap diagram_update_connections_object
	Patch from Paolo Bernardi, together with the property setting closes bug #300572

2005-06-01  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/pydia-property.c : complete refactoring of property 
	setting, now also supports setting of property arrays
	* plug-ins/python/pydia-*.c plug-ins/python/diamodule.c : adapt to 
	Python namespacing conventions
	* plug-ins/python/pydiadoc.py : use the stuff above to produce more 
	complete UML Classes with attributes and operations
	* plug-ins/python/otypes.py : now also show the properties of the objects

	* objects/UML/class.c(umlclass_set_props) : need to update object::connections
	(pointers), they might be changed with attributes and opertions changing

	* plug-ins/python/pydia-property.c : PointArray and BezPointArray property getters
	were broken. Apparently noone used them before.

	* plug-ins/python/pydia-diagram.c plug-ins/python/pydia-diagramdata.c : moved methods
	which only operate on the DiagramData to the latter file. To get on the DiagramData
	object of a Diagram use diagram.data. [In C the Diagram is a subclass of DiagramData, 
	but I don't know how to reflect that in the bindings. And for backward compatibility 
	there also is the 'data' member.]

	* objects/UML/uml.c objects/UML/umlattribute.c objects/UML/umloperation.c 
	  objects/UML/umlparameter.c : describe enums with PropEnumData
